# mHC.cu

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  runmodal.py  setup.py
.github/workflows/: publish.yml
scripts/: benchgen.py
src/csrc/benchmarks/: bench_fused_rmsnorm_matmul.cu  bench_fused_rmsnorm_matmul_backward.cu  bench_mhc_layer.cu  bench_rmsnorm.cu  bench_rmsnorm_backward.cu  bench_sinkhorn_knopp.cu  bench_sinkhorn_knopp_backward.cu  bench_stream_ops.cu  bench_stream_ops_backward.cu
src/csrc/include/: bench_harness.cuh  profiling.cuh  utils.cuh
src/csrc/kernels/: fused_rmsnorm_matmul.cuh  mhc_layer.cuh  rmsnorm.cuh  sinkhorn_knopp.cuh  stream_ops.cuh
src/csrc/tests/: test_mhc_layer.cu  test_rmsnorm.cu  test_rmsnorm_backward.cu  test_stream_ops.cu
src/python/: bindings.cu
src/python/benchmarks/: bench_layer.py
src/python/mhc/: __init__.py  layer.py  model.py  ops.py  trainer.py
src/python/tests/: test_model.py  test_ops.py
